# MetaMover

./: .gitignore  CMakeLists.txt  IFileHandler.h  LICENSE  README.md  appconfig.h  appconfigmanager.cpp  appconfigmanager.h  appicon.rc  basicfilehandler.cpp  basicfilehandler.h  directorytransfer.cpp  directorytransfer.h  exif.cpp  exif.h  filehandlerfactory.h  main.cpp  metamovermainwindow.cpp  metamovermainwindow.h  metamovermainwindow.ui  observer.h  photofilehandler.cpp  photofilehandler.h  resources.qrc  scanner.cpp  scanner.h  threadpool.h  transfermanager.cpp  transfermanager.h  videofilehandler.cpp  videofilehandler.h
media/: Attribution.txt  MetaMoverIcon.xcf  MetaMoverIcon_White.xcf
